# rhd2164-spi-fpga

./: .gitignore  README.md  run.sh  run_cmake.sh  run_tb.sh  zybo-z720
c/: rhd.c  rhd.h
hdl/: rhd_wrapper.v  spi_master.v  spi_master_cs.v
pynq/: README.md
sim/: Makefile  spi_master_tb.py
source/: spi_master.v  spi_master_cs.v
tests/: CMakeLists.txt  Makefile  rhd_test.cpp  spi_master_tb.py
tests/rhd_wrapper/: Makefile  rhd_wrapper_tb.py
tests/spi_master_cs/: Makefile  spi_master_tb.py
vitis/: main.c
vivado/: axi-rhd-spi.tcl  copy-exported.sh  insert_rhd2164.tcl  rhd-spi.tcl  rhd-spi_wrapper_zybo_z720.bit  rhd-spi_wrapper_zybo_z720.xsa  rhd2164-spi.tcl
vivado/zybo-z720/: design_1.hwh  design_1_wrapper.bit  design_1_wrapper.xsa  rhd2164-spi_zybo_z720.xdc
